--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body> 
 <!--TODO Image of myself: Twitter, circular -->
-    <img height="100" src="./images/Picture of Diego.png" alt="Picture of Diego" />
+    <img height="100" src="/images/Picture of Diego.png" alt="Picture of Diego" />
 
 <!--TODO Name and Position -->
     <h1>Diego Luna</h1>
