--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
 <!--TODO Contact-->
     <h2>Links</h2>
 
-    <a href="https://github.com/Liunae"><img height="35" src="../images/GitHub.png" alt="GitHub Link"></a>
-    <a href="mailto: diegolunav83@outlook.com"><img height="35" src="../images/EmailLogo.png" alt="Email link"></a>
+    <a href="https://github.com/Liunae"><img height="35" src="/images/GitHub.png" alt="GitHub Link"></a>
+    <a href="mailto: diegolunav83@outlook.com"><img height="35" src="/images/EmailLogo.png" alt="Email link"></a>
 
 </body>
 </html>
