--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body> 
 <!--TODO Image of myself: Twitter, circular -->
-    <img height="100" src="/images/Picture of Diego.png" alt="Picture of Diego" />
+    <img height="100" src="./images/Picture of Diego.png" alt="Picture of Diego" />
 
 <!--TODO Name and Position -->
     <h1>Diego Luna</h1>
@@ -103,8 +103,8 @@
 
 <!--TODO Contact-->
     <h2>Links</h2>
-    <a href="https://github.com/Liunae"><img height="35" src="/images/EmailLogo.png" alt="Link to email"></a>
-    <a href="mailto: diegolunav83@outlook.com"><img height="35" src="/images/GitHub.png" alt="Link to GitHub"></a>
+    <a href="https://github.com/Liunae"><img height="35" src="./images/EmailLogo.png" alt="Link to email"></a>
+    <a href="mailto: diegolunav83@outlook.com"><img height="35" src="./images/GitHub.png" alt="Link to GitHub"></a>
 
 </body>
 </html>
